# MMN14

./: .gitignore  CMakeLists.txt  Global TODO  Makefile  README.md  fact sheet  pre-commit
READY_FOR_RELEASE/: Makefile
READY_FOR_RELEASE/src/: base4.c  constant_data.h  cpu_word.c  cpu_word.h  errors.h  list.c  list.h  main.c  parse_directives.c  parse_ops.c  parse_ops.h  parsing.h  state.h  util_funcs.c
READY_FOR_RELEASE/tests/myprog/: myprog.as  myprog.ob
READY_FOR_RELEASE/tests/ps/: ps.ent
integrationtests/: arguments.sh  assemblytest1.as  assemblytest1.sh  exampletest.sh
pseudocode/: main.pseudo  pseudo
src/: argmanager.c  argmanager.h  base4.c  base4.h  code.c  code.h  constant_data.c  constant_data.h  conststrings.h  cpu_word.c  cpu_word.h  directive_functions.c  directive_functions.h  directive_parser.c  directive_parser.h  errorcodes.h  errors.h  fileloader.c  fileloader.h  filewriter.c  filewriter.h  general_parsing.c  general_parsing.h  global_constants.h  individual_directives_and_ops.c  individual_directives_and_ops.h  infinitestructures.c  infinitestructures.h  lexer.c  lexer.h  lexer_enums.h  list.c  list.h  macros.h  main.c  op_parser.c  op_parser.h  parse_directives.c  parse_directives.h  parse_ops.c  (+17 more)
tests/: ps.as  ps.ent  test.sh
tests/test_files/: ps.as
tests/test_files/badpath-datasize/: badpath-datasize.stderr
tests/test_files/myprog/: myprog.as  (+3 more)
theory/: example_lexer_output.c.example  theory.txt
unittests_obj/: .gitignore
unittests_src/: fileio.c  filewriter.c  infinitestructures.c  testable.c  utilityfunctions.c  whitespace.c
(+6 files in other folders)
